# Open-Frame-Studio

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml  release.yml
ofs-cloud/: Cargo.toml
ofs-cloud/src/: api.rs  main.rs  storage.rs
ofs-core/: Cargo.toml
ofs-core/src/: bcf.rs  calculation.rs  certification.rs  combination.rs  energy.rs  geometry.rs  glass_library.rs  grid.rs  hardware.rs  ids.rs  ifc_guid.rs  ifc_roundtrip.rs  kozijn.rs  lib.rs  optimization.rs  performance_class.rs  planning.rs  pricing.rs  procurement.rs  production.rs  profile.rs  quotation.rs  sill.rs  template.rs  thermal.rs  validation.rs
ofs-wasm/: Cargo.toml
ofs-web/: ar-preview.html  index.html  workshop.html
profiles/: index.json
profiles/aluminum/: generic.json  reynaers.json  schuco.json
profiles/pvc/: aluplast.json  deceuninck.json  gealan.json  generic.json  kommerling.json  veka.json
profiles/wood/: abc-profiel.json  accoya.json  goemaat.json  hardhout-fsc.json  hebo.json  kvt-standaard.json  meranti.json  naaldhout.json  raamhout.json  raamwerk.json  webo.json  weekamp.json
profiles/wood-aluminum/: hout-aluminium.json
python/: main.py  requirements.txt
python/ofs_dxf/: generator.py
python/ofs_ifc/: generator.py  ils_properties.py
python/ofs_import/: __init__.py  catalog_parser.py  dxf_profile_parser.py
python/ofs_pdf/: kozijnstaat.py  werkplaats_tekening.py
src-tauri/: Cargo.toml  tauri.conf.json
temp/: session-summary.md
ui/: index.html  package-lock.json  package.json
(+86 files in other folders)
